--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,21 @@
     <header class="hero">
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
-            <p class="hero__text"> O maior evento de tecnologia do Brasil começa em <span id="contador"></span></p>
+            <p class="hero__text"> Meu aniversario começa em  <span id="contador"></span></p>
             
             <div class="infos-bar">
                 <ul class="infos-bar__infos">
                     <li class="infos-bar__infos__item">
                         <b>Localização</b>
-                        Allianz Parque - São Paulo
+                        Cuiabá - MT
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Preço</b>
-                        A partir de R$ 120,00
+                        Free
                     </li>
                     <li class="infos-bar__infos__item">
                         <b>Quando</b>
-                        12/12/2022 ás 19hrs
+                        13/12/2023 ás 19hrs
                     </li>
                 </ul>
                 <a href="" class="button button--primary">
@@ -41,48 +41,14 @@
     <section class="event event--frontend" >
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Front-end</h2>
+                <h2 class="event__details__title">Meu ultimo aniversario</h2>
                 <p class="event__details__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni saepe unde officiis! Eos beatae aperiam nobis? Quos asperiores nesciunt libero ullam nemo illum fugit, natus minus eligendi possimus labore?
                 </p>
             </div>
             <img class="event__image" src="./images/frontend.png" alt="Front-end">
         </div>
-    </section>
-        <section class="event event--ux-ui event--image-left" >
-        <div class="container" data-aos="fade-left">
-            <div class="event__details">
-                <h2 class="event__details__title">UI-UX</h2>
-                <p class="event__details__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni saepe unde officiis! Eos beatae aperiam nobis? Quos asperiores nesciunt libero ullam nemo illum fugit, natus minus eligendi possimus labore?
-                </p>
-            </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
-        </div>
-    </section>
-</section>
-<section class="event event--data-science">
-<div class="container" data-aos="fade-right">
-    <div class="event__details">
-        <h2 class="event__details__title">UI-UX</h2>
-        <p class="event__details__description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni saepe unde officiis! Eos beatae aperiam nobis? Quos asperiores nesciunt libero ullam nemo illum fugit, natus minus eligendi possimus labore?
-        </p>
-    </div>
-    <img class="event__image" src="./images/frontend.png" alt="Front-end">
-</div>
-</section>
-<section class="event event--backend event--image-left">
-    <div class="container" data-aos="fade-left">
-        <div class="event__details">
-            <h2 class="event__details__title">Back-end</h2>
-            <p class="event__details__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni saepe unde officiis! Eos beatae aperiam nobis? Quos asperiores nesciunt libero ullam nemo illum fugit, natus minus eligendi possimus labore?
-            </p>
-        </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end">
-    </div>
-    </section>
+
 
     
 
